# std

./: Makefile  README.md  README_v1_1.md  ToDO_BUG.md  install.sh  main.cpp  readme-ai.md  uninstall.sh
linux/: Makefile  install.sh  std  uninstall.sh
src/: class_hierarchy.md  flat_main.cpp  main.cpp  std
src/code/: CMakeLists.txt  Makefile  arg_manager.cpp  arg_manager.h  build.sh  cli_ui.cpp  cli_ui.h  cmd_ctrl.cpp  cmd_ctrl.h  control.h  device_ctrl.cpp  device_ctrl.h  enum_class.cpp  enum_class.h  json_handler.cpp  json_handler.h  main.cpp  master.cpp  master.h  time_account.cpp  time_account.h  translator.cpp  translator.h
src/code/abstract_class/: ctrl.h  interaction.h  sensor.h  ui_interface.h
src/code/bme280/: bme280_defs.h  bme280_sensor.cpp  bme280_sensor.h  sensor.h
src/code/cmake/toolchains/: mingw64-toolchain.cmake
src/code/commands/: add_alias_command.cpp  add_alias_command.h  alias_command.cpp  alias_command.h  change_command.cpp  change_command.h  command.cpp  command.h  entity_command.cpp  entity_command.h  handle_crontab.cpp  handle_crontab.h  interaction.h  listbox.h  show_command.cpp  show_command.h
src/code/control/: arg_processor.h  clock.h  cmd_ctrl.cpp  cmd_ctrl.h  ctrl.h  device_ctrl.cpp  device_ctrl.h  device_processor.cpp  device_processor.h  processor.h
src/code/exception/: exception.h
src/code/files/: ChocoHaze.json  Minijob.json  accounts.json  automation_config.json  test.json
src/code/interface/: cli_ui.cpp  cli_ui.h  emoji.h  replex.cpp  replex.h  translator.cpp  translator.h  ui_interface.h
src/code/linux/: std
src/code/manager/: arg_manager.cpp  arg_manager.h  env_manager.cpp  env_manager.h  manager.h
src/test/: Makefile  test_crontag_parse.cpp  test_device_ctrl.cpp  test_time_account  test_time_account.cpp  tests
src/test/v1_0_tests/: Makefile  test_cmd_ctrl  test_cmd_ctrl.cpp  test_time_account  test_time_account.cpp
version_1_0/: LICENSE  Makefile  README.md  main.cpp
version_1_0/win_64/: std.bat
win_32/: install.bat  uninstall.bat
win_64/: install.bat  std.bat  uninstall.bat
